# chikaterasu

./: README.md  README.rst  ana_chikaterasu.sh  analysis.md  aru_ana_chikaterasu_20200610.sh  aru_chikaterasu_20210227.sh  chikaterasu.sh  readme.md
_unfinished_analysis_tools/: aru_kde.py  kde_plot.py
chika_mdp/: md.mdp  md_efield.md  md_rheo.md  mdrheo.mdp  mdrheoE.mdp  minim.mdp  nmr_refine_minim.mdp  npt.mdp  nvt.mdp  readme.md
chikaterasu_m/: README.md  ana_chikaterasu_m.sh  chikaterasu_m.sh  note.rst
chikaterasu_m/backward/: CG_posre.gro  README.rst  aru_backward.sh  aru_initram.sh  chika_backward.sh  chika_go.sh  note.rst  topol.top
custom_analysis/: chikaplot.py  cluster_analysis.sh  distance_histograms.py  dssp.m2p  jupyter_view.md  kde_plot.py  kde_plot_overlay.py  loop_and_terminus_modelling_modeller.rst  pca_for_subgroup.sh  plot_hbmap.pl  plot_hbmap_Analysis_nonCyclicCyclic_323K.xlsx  quick_traj_view_on_the_fly.md
custom_analysis/cluster_analysis/: cluster_analysis.sh  compare_2_sets_of_clusters.sh
custom_analysis/cmda/: cdma_janin_kde.py  cmda_janin.py  cmda_janin_ai2bmd.py  cmda_janin_time.py
custom_analysis/hbond_donor_acceptor_analysis/: hbond_pandas.py
custom_analysis/movie_maker/: readme.rst
custom_restraints/: README.rst  distance_restraints.itp  distance_restraints.rst  zn_bond.top
gui/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
misc/: ai2bmd.md  ase2pdb.py  cif2pdb.py  cif2pdb.sh  diagnostic_energy_extraction.md  fresh_setup_linux_pc.sh  gromacs_continue.sh
misc/ai2bmd/: 1_modify_termini.md  readme.md  (+3 more)
(+73 files in other folders)
